# sonomar

./: Cargo.toml  Makefile  README.md  bump_major.sh  bump_minor.sh  bump_patch.sh
.github/workflows/: release.yaml  tag-release.yaml
examples/: basic_usage.rs
src/: lib.rs  main.rs  multilingual.rs
