[package]
name = "sonomar"
version = "0.1.0"
edition = "2021"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
dyn-fmt = "0.4.0"
serde = { version = "1.0.190", features = ["serde_derive"] }
tokenizers = "0.14.1"
uuid = { version = "1.5.0", features = ["v4"] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
hf-hub = "0.3.2"
serde_json = "1.0.108"
derive_more = "0.99.17"
accelerate-src = { version = "0.3.2", optional = true }
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"], optional = true }
cudarc = { version = "0.9.14", features = ["f16"], optional = true }
half = { version = "2.3.1", features = ["num-traits", "use-intrinsics", "rand_distr"], optional = true }
candle-flash-attn = { git = "https://github.com/huggingface/candle.git", version = "0.3.0", optional = true }
anyhow = "1.0.75"
rand = "0.8.5"
clap = {version = "4.4.7", features = ["derive"] }
byteorder = "1.5.0"
wav = "1.0.0"

[features]
default = []
accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
cudnn = ["candle-core/cudnn"]
flash-attn = ["cuda", "candle-transformers/flash-attn", "dep:candle-flash-attn"]
mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
nccl = ["cuda", "cudarc/nccl", "dep:half"]
